# set-based-prompting

./: CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
data/: add_dividers.py  convert_csqa.sh  convert_mmlu.sh  csqa_input.json  csqa_script_input.json  sample_script_input_new.json  sample_script_input_old.json  sample_script_output_new.json  sample_script_output_old.json  split_csqa.py
data/csqa_quoted/: csqa_input_00000.json  csqa_input_00500.json  csqa_input_01000.json  csqa_input_01500.json  csqa_input_02000.json  csqa_input_02500.json  csqa_input_03000.json  csqa_input_03500.json  csqa_input_04000.json  csqa_input_04500.json  csqa_input_05000.json  csqa_input_05500.json  csqa_input_06000.json  csqa_input_06500.json  csqa_input_07000.json  csqa_input_07500.json  csqa_input_08000.json  csqa_input_08500.json  csqa_input_09000.json  csqa_input_09500.json
data/csqa_split/: csqa_input_00000.json  csqa_input_00500.json  csqa_input_01000.json  csqa_input_01500.json  csqa_input_02000.json  csqa_input_02500.json  csqa_input_03000.json  csqa_input_03500.json  csqa_input_04000.json  csqa_input_04500.json  csqa_input_05000.json  csqa_input_05500.json  csqa_input_06000.json  csqa_input_06500.json  csqa_input_07000.json  csqa_input_07500.json  csqa_input_08000.json  csqa_input_08500.json  csqa_input_09000.json  csqa_input_09500.json
data/mmlu_input/: abstract_algebra_test.json  (+56 more)
set_based_prompting/: __init__.py  attention_mask_editing.py  data_types.py  evalCSQA.py  input_processing.py  modeling_gpt_attention_refactored.py  modeling_llama_attention.py  utils.py
(+57 files in other folders)
